lab3/parser.output
Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 Specifier: TYPE

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 VarDec: ID

   11 FuncDec: ID LP VarList RP
   12        | ID LP RP

   13 VarList: ParamDec
   14        | ParamDec COMMA VarList

   15 ParamDec: Specifier VarDec

   16 CompSt: LC DefList StmList RC

   17 StmList: /* empty */
   18        | Stmt StmList

   19 Stmt: Exp SEMI
   20     | CompSt
   21     | RETURN Exp SEMI
   22     | IF LP Exp RP Stmt
   23     | IF LP Exp RP Stmt ELSE Stmt
   24     | WHILE LP Exp RP Stmt

   25 DefList: /* empty */
   26        | Def DefList

   27 Def: Specifier DecList SEMI

   28 DecList: Dec
   29        | Dec COMMA DecList

   30 Dec: VarDec
   31    | VarDec ASSIGNOP Exp

   32 Exp: Exp ASSIGNOP Exp
   33    | Exp AND Exp
   34    | Exp OR Exp
   35    | Exp RELOP Exp
   36    | Exp PLUS Exp
   37    | Exp MINUS Exp
   38    | Exp STAR Exp
   39    | Exp DIV Exp
   40    | Exp PP
   41    | Exp MM
   42    | Exp PA Exp
   43    | Exp MA Exp
   44    | LP Exp RP
   45    | MINUS Exp
   46    | NOT Exp
   47    | ID LP Args RP
   48    | ID LP RP
   49    | ID
   50    | INT
   51    | FLOAT
   52    | CHAR

   53 Args: Exp COMMA Args
   54     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 6
INT (258) 50
ID (259) 10 11 12 47 48 49
RELOP (260) 35
TYPE (261) 7
FLOAT (262) 51
CHAR (263) 52
LP (264) 11 12 22 23 24 44 47 48
RP (265) 11 12 22 23 24 44 47 48
LC (266) 16
RC (267) 16
SEMI (268) 4 6 19 21 27
COMMA (269) 9 14 29 53
PLUS (270) 36
MINUS (271) 37 45
STAR (272) 38
DIV (273) 39
ASSIGNOP (274) 31 32
AND (275) 33
OR (276) 34
NOT (277) 46
IF (278) 22 23
ELSE (279) 23
WHILE (280) 24
RETURN (281) 21
PP (282) 40
MM (283) 41
PA (284) 42
MA (285) 43
UMINUS (286)
LOWER_THEN_ELSE (287)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
program (34)
    on left: 1, on right: 0
ExtDefList (35)
    on left: 2 3, on right: 1 3
ExtDef (36)
    on left: 4 5 6, on right: 3
Specifier (37)
    on left: 7, on right: 4 5 15 27
ExtDecList (38)
    on left: 8 9, on right: 4 9
VarDec (39)
    on left: 10, on right: 8 9 15 30 31
FuncDec (40)
    on left: 11 12, on right: 5
VarList (41)
    on left: 13 14, on right: 11 14
ParamDec (42)
    on left: 15, on right: 13 14
CompSt (43)
    on left: 16, on right: 5 20
StmList (44)
    on left: 17 18, on right: 16 18
Stmt (45)
    on left: 19 20 21 22 23 24, on right: 18 22 23 24
DefList (46)
    on left: 25 26, on right: 16 26
Def (47)
    on left: 27, on right: 26
DecList (48)
    on left: 28 29, on right: 27 29
Dec (49)
    on left: 30 31, on right: 28 29
Exp (50)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    50 51 52, on right: 19 21 22 23 24 31 32 33 34 35 36 37 38 39 40
    41 42 43 44 45 46 53 54
Args (51)
    on left: 53 54, on right: 47 53


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


state 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


state 2

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


state 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 5
    Specifier   go to state 6


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 10

    ExtDecList  go to state 11
    VarDec      go to state 12
    FuncDec     go to state 13


state 7

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


state 10

   10 VarDec: ID .
   11 FuncDec: ID . LP VarList RP
   12        | ID . LP RP

    LP  shift, and go to state 14

    $default  reduce using rule 10 (VarDec)


state 11

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 15


state 12

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList

    COMMA  shift, and go to state 16

    $default  reduce using rule 8 (ExtDecList)


state 13

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 17

    CompSt  go to state 18


state 14

   11 FuncDec: ID LP . VarList RP
   12        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 19

    Specifier  go to state 20
    VarList    go to state 21
    ParamDec   go to state 22


state 15

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 16

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 23

    ExtDecList  go to state 24
    VarDec      go to state 12


state 17

   16 CompSt: LC . DefList StmList RC

    TYPE  shift, and go to state 2

    $default  reduce using rule 25 (DefList)

    Specifier  go to state 25
    DefList    go to state 26
    Def        go to state 27


state 18

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


state 19

   12 FuncDec: ID LP RP .

    $default  reduce using rule 12 (FuncDec)


state 20

   15 ParamDec: Specifier . VarDec

    ID  shift, and go to state 23

    VarDec  go to state 28


state 21

   11 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 29


state 22

   13 VarList: ParamDec .
   14        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 30

    $default  reduce using rule 13 (VarList)


state 23

   10 VarDec: ID .

    $default  reduce using rule 10 (VarDec)


state 24

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


state 25

   27 Def: Specifier . DecList SEMI

    ID  shift, and go to state 23

    VarDec   go to state 31
    DecList  go to state 32
    Dec      go to state 33


state 26

   16 CompSt: LC DefList . StmList RC

    INT     shift, and go to state 34
    ID      shift, and go to state 35
    FLOAT   shift, and go to state 36
    CHAR    shift, and go to state 37
    LP      shift, and go to state 38
    LC      shift, and go to state 17
    MINUS   shift, and go to state 39
    NOT     shift, and go to state 40
    IF      shift, and go to state 41
    WHILE   shift, and go to state 42
    RETURN  shift, and go to state 43

    $default  reduce using rule 17 (StmList)

    CompSt   go to state 44
    StmList  go to state 45
    Stmt     go to state 46
    Exp      go to state 47


state 27

   26 DefList: Def . DefList

    TYPE  shift, and go to state 2

    $default  reduce using rule 25 (DefList)

    Specifier  go to state 25
    DefList    go to state 48
    Def        go to state 27


state 28

   15 ParamDec: Specifier VarDec .

    $default  reduce using rule 15 (ParamDec)


state 29

   11 FuncDec: ID LP VarList RP .

    $default  reduce using rule 11 (FuncDec)


state 30

   14 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 20
    VarList    go to state 49
    ParamDec   go to state 22


state 31

   30 Dec: VarDec .
   31    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 50

    $default  reduce using rule 30 (Dec)


state 32

   27 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 51


state 33

   28 DecList: Dec .
   29        | Dec . COMMA DecList

    COMMA  shift, and go to state 52

    $default  reduce using rule 28 (DecList)


state 34

   50 Exp: INT .

    $default  reduce using rule 50 (Exp)


state 35

   47 Exp: ID . LP Args RP
   48    | ID . LP RP
   49    | ID .

    LP  shift, and go to state 53

    $default  reduce using rule 49 (Exp)


state 36

   51 Exp: FLOAT .

    $default  reduce using rule 51 (Exp)


state 37

   52 Exp: CHAR .

    $default  reduce using rule 52 (Exp)


state 38

   44 Exp: LP . Exp RP

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    CHAR   shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 54


state 39

   45 Exp: MINUS . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    CHAR   shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 55


state 40

   46 Exp: NOT . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    CHAR   shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 56


state 41

   22 Stmt: IF . LP Exp RP Stmt
   23     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 57


state 42

   24 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 58


state 43

   21 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    CHAR   shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 59


state 44

   20 Stmt: CompSt .

    $default  reduce using rule 20 (Stmt)


state 45

   16 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 60


state 46

   18 StmList: Stmt . StmList

    INT     shift, and go to state 34
    ID      shift, and go to state 35
    FLOAT   shift, and go to state 36
    CHAR    shift, and go to state 37
    LP      shift, and go to state 38
    LC      shift, and go to state 17
    MINUS   shift, and go to state 39
    NOT     shift, and go to state 40
    IF      shift, and go to state 41
    WHILE   shift, and go to state 42
    RETURN  shift, and go to state 43

    $default  reduce using rule 17 (StmList)

    CompSt   go to state 44
    StmList  go to state 61
    Stmt     go to state 46
    Exp      go to state 47


state 47

   19 Stmt: Exp . SEMI
   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp
   40    | Exp . PP
   41    | Exp . MM
   42    | Exp . PA Exp
   43    | Exp . MA Exp

    RELOP     shift, and go to state 62
    SEMI      shift, and go to state 63
    PLUS      shift, and go to state 64
    MINUS     shift, and go to state 65
    STAR      shift, and go to state 66
    DIV       shift, and go to state 67
    ASSIGNOP  shift, and go to state 68
    AND       shift, and go to state 69
    OR        shift, and go to state 70
    PP        shift, and go to state 71
    MM        shift, and go to state 72
    PA        shift, and go to state 73
    MA        shift, and go to state 74


state 48

   26 DefList: Def DefList .

    $default  reduce using rule 26 (DefList)


state 49

   14 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 14 (VarList)


state 50

   31 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    CHAR   shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 75


state 51

   27 Def: Specifier DecList SEMI .

    $default  reduce using rule 27 (Def)


state 52

   29 DecList: Dec COMMA . DecList

    ID  shift, and go to state 23

    VarDec   go to state 31
    DecList  go to state 76
    Dec      go to state 33


state 53

   47 Exp: ID LP . Args RP
   48    | ID LP . RP

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    CHAR   shift, and go to state 37
    LP     shift, and go to state 38
    RP     shift, and go to state 77
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp   go to state 78
    Args  go to state 79


state 54

   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp
   40    | Exp . PP
   41    | Exp . MM
   42    | Exp . PA Exp
   43    | Exp . MA Exp
   44    | LP Exp . RP

    RELOP     shift, and go to state 62
    RP        shift, and go to state 80
    PLUS      shift, and go to state 64
    MINUS     shift, and go to state 65
    STAR      shift, and go to state 66
    DIV       shift, and go to state 67
    ASSIGNOP  shift, and go to state 68
    AND       shift, and go to state 69
    OR        shift, and go to state 70
    PP        shift, and go to state 71
    MM        shift, and go to state 72
    PA        shift, and go to state 73
    MA        shift, and go to state 74


state 55

   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp
   40    | Exp . PP
   41    | Exp . MM
   42    | Exp . PA Exp
   43    | Exp . MA Exp
   45    | MINUS Exp .

    $default  reduce using rule 45 (Exp)


state 56

   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp
   40    | Exp . PP
   41    | Exp . MM
   42    | Exp . PA Exp
   43    | Exp . MA Exp
   46    | NOT Exp .

    $default  reduce using rule 46 (Exp)


state 57

   22 Stmt: IF LP . Exp RP Stmt
   23     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    CHAR   shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 81


state 58

   24 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    CHAR   shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 82


state 59

   21 Stmt: RETURN Exp . SEMI
   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp
   40    | Exp . PP
   41    | Exp . MM
   42    | Exp . PA Exp
   43    | Exp . MA Exp

    RELOP     shift, and go to state 62
    SEMI      shift, and go to state 83
    PLUS      shift, and go to state 64
    MINUS     shift, and go to state 65
    STAR      shift, and go to state 66
    DIV       shift, and go to state 67
    ASSIGNOP  shift, and go to state 68
    AND       shift, and go to state 69
    OR        shift, and go to state 70
    PP        shift, and go to state 71
    MM        shift, and go to state 72
    PA        shift, and go to state 73
    MA        shift, and go to state 74


state 60

   16 CompSt: LC DefList StmList RC .

    $default  reduce using rule 16 (CompSt)


state 61

   18 StmList: Stmt StmList .

    $default  reduce using rule 18 (StmList)


state 62

   35 Exp: Exp RELOP . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    CHAR   shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 84


state 63

   19 Stmt: Exp SEMI .

    $default  reduce using rule 19 (Stmt)


state 64

   36 Exp: Exp PLUS . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    CHAR   shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 85


state 65

   37 Exp: Exp MINUS . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    CHAR   shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 86


state 66

   38 Exp: Exp STAR . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    CHAR   shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 87


state 67

   39 Exp: Exp DIV . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    CHAR   shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 88


state 68

   32 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    CHAR   shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 89


state 69

   33 Exp: Exp AND . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    CHAR   shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 90


state 70

   34 Exp: Exp OR . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    CHAR   shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 91


state 71

   40 Exp: Exp PP .

    $default  reduce using rule 40 (Exp)


state 72

   41 Exp: Exp MM .

    $default  reduce using rule 41 (Exp)


state 73

   42 Exp: Exp PA . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    CHAR   shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 92


state 74

   43 Exp: Exp MA . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    CHAR   shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 93


state 75

   31 Dec: VarDec ASSIGNOP Exp .
   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp
   40    | Exp . PP
   41    | Exp . MM
   42    | Exp . PA Exp
   43    | Exp . MA Exp

    RELOP     shift, and go to state 62
    PLUS      shift, and go to state 64
    MINUS     shift, and go to state 65
    STAR      shift, and go to state 66
    DIV       shift, and go to state 67
    ASSIGNOP  shift, and go to state 68
    AND       shift, and go to state 69
    OR        shift, and go to state 70
    PP        shift, and go to state 71
    MM        shift, and go to state 72
    PA        shift, and go to state 73
    MA        shift, and go to state 74

    $default  reduce using rule 31 (Dec)


state 76

   29 DecList: Dec COMMA DecList .

    $default  reduce using rule 29 (DecList)


state 77

   48 Exp: ID LP RP .

    $default  reduce using rule 48 (Exp)


state 78

   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp
   40    | Exp . PP
   41    | Exp . MM
   42    | Exp . PA Exp
   43    | Exp . MA Exp
   53 Args: Exp . COMMA Args
   54     | Exp .
